2014-09-15  Holger Seelig  <holger.seelig@yahoo.de>

	* ViewVolume.h:
	* X3DRenderer.h:
	* ViewVolume.cpp:
	* X3DRenderer.cpp:
	* Shape.cpp:
	* Layout.cpp:
	* Viewport.h:
	* LayoutGroup.h:
	* Viewport.cpp:
	* LayoutLayer.cpp:
	* LayoutGroup.cpp:
	* X3DLayerNode.cpp:
	* VisibilitySensor.cpp: 

2014-09-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Layout.cpp:
	* LayoutGroupTool.h:
	* LayoutGroup.cpp:
	* ScreenGroup.cpp:
	* X3DLayerNode.cpp:
	* X3DBoundedObjectTool.h:
	* X3DTransformNodeTool.h:
	* ScreenFontStyle.cpp: 

2014-09-14  Holger Seelig  <holger.seelig@yahoo.de>

	* Layout.h:
	* Layout.cpp: 

2014-09-14  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* X3DScene.h:
	* BoundingBox.x3dv:
	* Layout.h:
	* Layout.cpp:
	* LayoutGroupTool.h:
	* X3DExecutionContext.h:
	* LayoutGroup.h:
	* X3DLayoutNode.h:
	* LayoutGroup.cpp: 

2014-09-14  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DScene.h:
	* X3DExecutionContext.h: 

2014-09-13  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserContext.cpp: 

2014-09-13  Holger Seelig  <holger.seelig@yahoo.de>

	* ParticleSystem.cpp: 

2014-09-13  Holger Seelig  <holger.seelig@yahoo.de>

	* ParticleSystem.cpp: 

2014-09-13  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowser.cpp:
	* ParticleSystem.h:
	* ParticleSystem.cpp: 

2014-09-12  Holger Seelig  <holger.seelig@yahoo.de>

	* FontStyle.h:
	* X3DFontStyleNode.h:
	* ScreenFontStyle.h: 

2014-09-12  Holger Seelig  <holger.seelig@yahoo.de>

	* ChangeLog:
	* splash.x3dv: 

2014-09-12  Holger Seelig  <holger.seelig@yahoo.de>

	* splash.x3dv: 

2014-09-12  Holger Seelig  <holger.seelig@yahoo.de>

	* Loader.cpp:
	* X3DExecutionContext.h: 

2014-09-11  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DViewpointNode.cpp: 

2014-09-11  Holger Seelig  <holger.seelig@yahoo.de>

	* RenderingProperties.h:
	* RenderingProperties.cpp:
	* jsBrowser.cpp: 

2014-09-11  Holger Seelig  <holger.seelig@yahoo.de>

	* NavigationInfo.cpp: 
