@@ -1,5 +1,9 @@
 2014-09-15  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* ViewportContainer.cpp: 
+
+2014-09-15  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* ViewVolume.h:
 	* X3DRenderer.h:
 	* ViewVolume.cpp:
